# ics721-virus

./: .gitignore
contracts/cw721-virus/: Cargo.toml
contracts/cw721-virus/src/: lib.rs
ts-relayer-tests/: build.sh  infect-env.sh  infect-final-transfer.sh  infect-init-spike-proteins.sh  infect-init-transfer.sh  infect-instantiate.sh  infect-manual-relay.sh  infect-query-vouchers.sh  infect-update-spike-proteins.sh  infect-upload.sh  infect-vars.json  infect-vars.sh  juno-contracts.txt  reboot-and-test.sh
ts-relayer-tests/src/: ics721.spec.ts  utils.ts
